# celeritas

./: CMakeLists.txt
app/: CMakeLists.txt
app/geant-export/: geant-export.cc
app/geant-exporter/: geant-exporter.cc
app/geant-exporter/src/: ActionInitialization.cc  ActionInitialization.hh  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  GeantPhysicsTableParser.cc  GeantPhysicsTableParser.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  RunAction.hh  SteppingAction.cc  SteppingAction.hh
doc/: development.rst  geant-exporter.graffle
doc/half-baked/: flow.graffle  state.graffle
scripts/dev/: celeritas-gen.py
src/: CMakeLists.txt
src/base/: Array.i.hh  DeviceAllocation.cuda.cc  DeviceVector.hh  G4Importer.cc  G4Importer.hh  G4ParticleDef.cc  G4ParticleDef.hh  G4PhysicsTable.hh  Macros.hh  OpaqueId.hh  Range.hh  StackAllocator.i.hh  StackAllocatorPointers.hh  StackAllocatorPointers.i.hh  StackAllocatorStore.cc  StackAllocatorStore.hh  StackAllocatorView.hh  StackAllocatorView.i.hh  Types.hh
src/comm/: Communicator.hh  Communicator.mpi.cc  Communicator.serial.cc  Types.hh  Types.serial.cc
src/geometry/: GeoTrackView.i.hh  VGAccessor.hh  VGAccessor.i.hh
src/physics/: ConstantsAndUnits.hh  DummyProcess.cc  DummyProcess.hh
src/physics/base/: Action.hh  ConstantsAndUnits.hh  GeantImporter.cc  GeantImporter.hh  GeantParticleDef.cc  GeantParticleDef.hh  GeantPhysicsTable.hh  Interaction.hh  Interaction.i.hh  Particle.hh  Particle.i.hh  ParticleDef.hh  ParticleMd.hh  ParticleParams.cc  ParticleParams.hh  ParticleParamsView.hh  ParticleStatePointers.hh  ParticleStateStore.cc  ParticleStateStore.hh  ParticleStateView.hh  ParticleTrackView.hh  ParticleTrackView.i.hh  Secondary.hh  Secondary.i.hh  SecondaryAllocatorPointers.hh  SecondaryAllocatorStore.cc  SecondaryAllocatorStore.hh  SecondaryAllocatorView.hh  SecondaryAllocatorView.i.hh  SecondaryStack.hh  SecondaryStackAllocator.hh  SecondaryStackAllocator.i.hh  SecondaryStackPointers.hh  SecondaryStackStore.cc  SecondaryStackStore.hh  SecondaryStackView.hh  ThreeVector.hh  ThreeVector.i.hh  Units.hh
src/physics/electromagnetic/: KleinNishinaSampleSecondaries.hh  KleinNishinaSampleSecondaries.i.hh  KleinNishinaXSCalculator.hh  KleinNishinaXSCalculator.i.hh
src/physics/em/: KNInteractor.hh  KNInteractor.i.hh  KNInteractorPointers.hh
src/physics/models/: ModelInterface.hh
src/random/: CurngEngine.cuh  RngStateContainer.cu  RngStateContainer.cuh  RngStateView.cuh
src/random/cuda/: RngEngine.cuh
src/random/distributions/: BinaryDistribution.hh  BinaryDistribution.i.hh  GenerateCanonical.hh  GenerateCanonical.i.hh  UniformRealDistribution.i.hh
src/sim/: AccumPathLength.hh  AccumPathLength.i.hh  Action.hh  Action.i.hh  Event.hh  InitializeTrack.cu  Primary.hh  Sim.hh  Sim.i.hh  SimParams.cc  SimParams.hh  SimParamsPointers.hh  SimParamsView.hh  SimStatePointers.hh  SimStateStore.cc  SimStateStore.hh  SimStateView.hh  SimTrackView.hh  SimTrackView.i.hh  Types.hh
test/: CMakeLists.txt  Main.hh
test/base/: StackAllocator.test.cc  StackAllocator.test.cu
test/detail/: NonMasterResultPrinter.cc  NonMasterResultPrinter.hh  ParallelHandler.cc  ParallelHandler.hh  TestMain.cc  TestMain.hh  Utils.cc  Utils.hh
test/physics/: DummyProcess.test.cc  HostDebugSecondaryStorage.hh  InteractorHostTestBase.cc  InteractorHostTestBase.hh
test/physics/base/: GeantImporter.test.cc  Particle.test.cc  Particle.test.cu  Particle.test.hh  SecondaryAllocator.test.cc  SecondaryAllocator.test.cu  SecondaryAllocator.test.hh  ThreeVector.test.cc
test/physics/base/data/: particleDefinitionTable.root  physicsTables.root
test/physics/electromagnetic/: KleinNishinaXSCalculator.test.cc
test/physics/em/: KNInteractor.test.cc
test/random/distributions/: BinaryDistribution.test.cc
test/sim/: AccumPathLength.test.cc  SimTrackView.test.cc
